--- a/tsconfig.json
+++ b/tsconfig.json
@@ -22,8 +22,9 @@
     "include": [
         "next-env.d.ts",
         "**/*.ts",
-        "**/*.tsx"
-, "src/pages/_document.js"    ],
+        "**/*.tsx",
+        "src/pages/_document.js"
+    ],
     "exclude": [
         "node_modules"
     ]
